--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 Flask==3.0.0
-Flask-CORS==3.0.10
-requests==2.31.0
-python-dotenv==1.0.0
+Flask-CORS==4.0.0
+Werkzeug==3.0.1
 psycopg2-binary==2.9.9
 APScheduler==3.10.4
+requests==2.31.0
+redis==5.0.1
+python-dotenv==1.0.0
 gunicorn==21.2.0
-pytz==2024.1
-tzlocal==5.2
-ujson==5.8.0
-beautifulsoup4==4.12.3
