--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,41 @@
+# KuraBak Backend - Production Dependencies
+# Python 3.11+
+
+# ======================================
+# WEB FRAMEWORK
+# ======================================
 Flask==3.0.0
 Flask-CORS==4.0.0
 Werkzeug==3.0.1
+
+# ======================================
+# TASK SCHEDULING
+# ======================================
 APScheduler==3.10.4
+
+# ======================================
+# HTTP CLIENT
+# ======================================
 requests==2.32.3
+urllib3==2.2.0
+
+# ======================================
+# CACHE & DATABASE
+# ======================================
 redis==5.0.1
+
+# ======================================
+# CONFIGURATION
+# ======================================
 python-dotenv==1.0.0
+
+# ======================================
+# WSGI SERVER (PRODUCTION)
+# ======================================
 gunicorn==21.2.0
+
+# ======================================
+# OPTIONAL: MONITORING (Opsiyonel)
+# ======================================
+# sentry-sdk[flask]==1.40.0  # Hata tracking için
+# prometheus-flask-exporter==0.22.4  # Metrik export için
