--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,13 @@
-# KuraBak Backend - Production Dependencies
-# Python 3.11+
-
-# ======================================
-# WEB FRAMEWORK
-# ======================================
-Flask==2.3.3              # 3.0.0 çok yeni, uyumsuzluk yapabilir
-Flask-CORS==4.0.0         # CORS headers için
-Werkzeug==2.3.7           # Flask 2.3.3 ile uyumlu versiyon
-
-# ======================================
-# TASK SCHEDULING & TIME (CRITICAL!)
-# ======================================
-APScheduler==3.10.4       # Background job scheduler
-pytz==2023.3.post1        # ⏰ TIMEZONE FIX için ŞART!
-
-# ======================================
-# HTTP CLIENT
-# ======================================
-requests==2.31.0          # API istekleri için
-urllib3==2.0.7            # HTTP client alt yapısı
-certifi==2023.11.17       # 🔒 SSL CERT FIX için ŞART!
-
-# ======================================
-# CACHE & DATABASE
-# ======================================
-redis==5.0.1              # Redis cache client
-
-# ======================================
-# LOGGING (KRİTİK EKSİK!)
-# ======================================
-json-log-formatter==1.0.2 # app.py'de json_log_formatter için GEREKLİ!
-
-# ======================================
-# TELEGRAM (GEREKLİ!)
-# ======================================
-python-telegram-bot==20.6 # Telegram monitor için GEREKLİ!
-
-# ======================================
-# CONFIGURATION
-# ======================================
-python-dotenv==1.0.0      # .env dosyalarını okumak için
-
-# ======================================
-# WSGI SERVER (PRODUCTION)
-# ======================================
-gunicorn==21.2.0          # 🚀 Production web server
+Flask==2.3.3
+Flask-CORS==4.0.0
+Werkzeug==2.3.7
+APScheduler==3.10.4
+pytz==2023.3.post1
+requests==2.31.0
+urllib3==2.0.7
+certifi==2023.11.17
+redis==5.0.1
+json-log-formatter==1.0.2
+python-telegram-bot==20.6
+python-dotenv==1.0.0
+gunicorn==21.2.0
