--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.3.3
-Flask-CORS==4.0.0
+Flask-Cors==4.0.0
 Werkzeug==2.3.7
 APScheduler==3.10.4
 pytz==2023.3.post1
@@ -8,6 +8,6 @@ urllib3==2.0.7
 certifi==2023.11.17
 redis==5.0.1
 json-log-formatter==1.0.2
-python-telegram-bot==20.6
 python-dotenv==1.0.0
 gunicorn==21.2.0
+psutil==5.9.6
