--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ requests==2.31.0
 urllib3==2.0.7
 certifi==2023.11.17
 redis==5.0.1
-json-log-formatter==1.0.2
+json-log-formatter>=1.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
 psutil==5.9.6
