--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,45 @@
+# ======================================
+# FLASK CORE (Web Framework)
+# ======================================
 Flask==2.3.3
 Flask-Cors==4.0.0
 Werkzeug==2.3.7
+
+# ======================================
+# SCHEDULER (Worker + Snapshot + Şef)
+# ======================================
 APScheduler==3.10.4
 pytz==2023.3.post1
+
+# ======================================
+# HTTP & API İSTEKLERİ
+# ======================================
 requests==2.31.0
 urllib3==2.0.7
 certifi==2023.11.17
+
+# ======================================
+# REDIS CACHE
+# ======================================
 redis==5.0.1
+
+# ======================================
+# LOGGING & ENV
+# ======================================
 json-log-formatter>=1.0
 python-dotenv==1.0.0
+
+# ======================================
+# PRODUCTION SERVER
+# ======================================
 gunicorn==21.2.0
+
+# ======================================
+# SİSTEM İZLEME (CPU/RAM)
+# ======================================
 psutil==5.9.6
+
+# ======================================
+# TELEGRAM BOT (YENİ EKLEME!) 🤖
+# ======================================
+python-telegram-bot==20.7
