--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,11 @@ gunicorn==21.2.0
 psutil==5.9.6
 
 # ======================================
-# TELEGRAM BOT (YENİ EKLEME!) 🤖
+# TELEGRAM BOT 🤖
 # ======================================
 python-telegram-bot==20.7
+
+# ======================================
+# AKILLI TAKVİM (Event Manager) 🗓️
+# ======================================
+holidays==0.36
