--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,11 @@ Flask-Cors==4.0.0
 Werkzeug==2.3.7
 
 # ======================================
+# 🔒 GÜVENLİK: RATE LIMITING (YENİ!)
+# ======================================
+Flask-Limiter==3.5.0
+
+# ======================================
 # SCHEDULER (Worker + Snapshot + Şef)
 # ======================================
 APScheduler==3.10.4
