--- a/requirements.txt
+++ b/requirements.txt
@@ -4,51 +4,62 @@
 Flask==2.3.3
 Flask-Cors==4.0.0
 Werkzeug==2.3.7
+
 # ======================================
 # 🔒 GÜVENLİK: RATE LIMITING
 # ======================================
 Flask-Limiter==3.5.0
+
 # ======================================
 # SCHEDULER (Worker + Snapshot + Şef)
 # ======================================
 APScheduler==3.10.4
 pytz==2023.3.post1
+
 # ======================================
 # HTTP & API İSTEKLERİ
 # ======================================
 requests==2.31.0
 urllib3==2.0.7
 certifi==2023.11.17
+
 # ======================================
 # REDIS CACHE
 # ======================================
 redis==5.0.1
+
 # ======================================
 # LOGGING & ENV
 # ======================================
 json-log-formatter>=1.0
 python-dotenv==1.0.0
+
 # ======================================
 # PRODUCTION SERVER
 # ======================================
 gunicorn==21.2.0
+
 # ======================================
 # SİSTEM İZLEME (CPU/RAM)
 # ======================================
 psutil==5.9.6
+
 # ======================================
 # TELEGRAM BOT 🤖
 # ======================================
 python-telegram-bot==20.7
+
 # ======================================
 # AKILLI TAKVİM (Event Manager) 🗓️
 # ======================================
 holidays==0.36
+
 # ======================================
 # 🔥 FIREBASE ADMIN SDK (Push Notifications)
 # ======================================
 firebase-admin==6.3.0
+
 # ======================================
-# 🤖 GOOGLE GEMINI AI (Smart Banner)
+# 🤖 GOOGLE GEMINI AI 2.0 (Smart Banner + News)
 # ======================================
-google-generativeai==0.3.2
+google-generativeai==0.8.3
